# Startup-decision-simulator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: easy_support_optimization_trace.jsonl  hard_startup_survival_trace.jsonl  medium_pricing_strategy_trace.jsonl  pricing_pressure_trace.jsonl  review_results.md  runway_crisis_trace.jsonl  summary_report.md  support_turbulence_trace.jsonl
env/: __init__.py  environment.py  grader.py  models.py  policies.py  tasks.py
scripts/: healthcheck.py
server/: app.py
