[project]
name = "startup-decision-simulator"
version = "1.0.0"
description = "OpenEnv Founder Agent benchmark: startup strategy under cash, churn, and competition."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["openenv", "reinforcement-learning", "benchmark", "agent", "startup"]
dependencies = [
    "fastapi>=0.100.0",
    "openai>=2.7.2",
    "openenv-core>=0.2.0",
    "pydantic==2.6.4",
    "PyYAML==6.0.1",
    "uvicorn>=0.23.0",
    "websockets>=12.0",
]

[project.scripts]
server = "server.app:main"
